--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
     "private": true,
     "scripts": {
       "prepare": "lerna bootstrap",
-      "lerna": "lerna"
+      "lerna": "lerna",
+      "build": "lerna run build",
+      "build:watch": "lerna exec yarn build:watch",
+      "test": "jest"
     },
     "devDependencies": {
+      "@types/jest": "^24.0.13",
+      "@types/lodash": "^4.14.134",
+      "@types/node": "^12.0.8",
+      "@typescript-eslint/eslint-plugin": "^1.10.2",
+      "@typescript-eslint/parser": "^1.10.2",
+      "eslint": "^5.16.0",
+      "eslint-plugin-jest": "^22.6.4",
+      "nodemon": "^1.19.1",
       "lerna": "^3.14.1",
-      "npm-run-all": "^4.1.5"
+      "npm-run-all": "^4.1.5",
+      "jest": "^24.8.0",
+      "ts-jest": "^24.0.2",
+      "typescript": "^3.5.1"
     },
     "workspaces": [
       "packages/*"
