--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -10,7 +10,6 @@
     "build": "tsc",
     "build:watch": "tsc --watch"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
