--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,19 @@ language: node_js
 node_js:
   - "12.1"
 
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build --debug
+jobs:
+  include:
+    - stage: "Tests"
 
-after_script:
-  - ./cc-test-reporter after-build --debug --exit-code $TRAVIS_TEST_RESULT
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build --debug
+
+      after_script:
+        - ./cc-test-reporter after-build --debug --exit-code $TRAVIS_TEST_RESULT
+
+      script:
+        - yarn run coverage
+
+
