--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
       "prepublish": "yarn build",
       "lerna": "lerna",
       "lexec": "lerna exec",
-      "lpubish": "lerna exec yarn publish",
+      "lpublish": "lerna exec yarn publish",
       "build": "lerna run build",
       "build:watch": "lerna exec --parallel -- yarn build:watch",
       "test": "jest",
