sets versions to beta

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pike/cli",
-  "version": "1.0.0",
+  "version": "0.0.1-beta1",
   "description": "pike cli",
   "main": "lib/cli.js",
   "author": "Travis Peterson",
