--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
     script:
     - yarn run coverage
   - stage: Deploy
-    if: tag IS present
+    # if: tag IS present
     node_js: "12.1"
     deploy:
       on:
