--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pike/config",
-  "version": "1.0.0",
+  "version": "0.0.1-beta1",
   "description": "pike package configuration",
   "main": "lib/index.js",
   "author": "Travis Peterson",
