--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pike/db",
-  "version": "1.0.0",
+  "version": "0.0.1-beta1",
   "description": "pike database integration powered by typeorm",
   "main": "lib/index.js",
   "author": "Travis Peterson",
