--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,34 @@
 language: node_js
 node_js:
-- '12.1'
+  - '12.1'
+
+cache:
+  yarn: true
+  directories:
+    - "node_modules"
+
 jobs:
   include:
   - stage: Tests
     before_script:
-    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
-      > ./cc-test-reporter
-    - chmod +x ./cc-test-reporter
-    - "./cc-test-reporter before-build"
+      - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      - chmod +x ./cc-test-reporter
+      - "./cc-test-reporter before-build"
     after_script:
-    - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+      - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
     script:
-    - yarn run coverage
+      - yarn run coverage
   - stage: Deploy
     # if: tag IS present
     node_js: "12.1"
+    before_deploy:
+      - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
     deploy:
-      on:
-        tags: true
+      provider: script
+      # on:
+      #   tags: true
       script:
-      - yarn lpublish
+        - yarn lpublish
       email: "$NPM_EMAIL"
       api_key: "$NPM_TOKEN"
       skip_cleanup: true
