--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,13 @@ jobs:
       - yarn run coverage
   - stage: Deploy
     # if: tag IS present
+    script:
+      - echo "publishing modules"
     node_js: "12.1"
     before_deploy:
       - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
     deploy:
+      node_js: "12.1"
       provider: script
       # on:
       #   tags: true
