more tweaks to publish

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "private": true,
     "scripts": {
       "prepublish": "yarn build",
       "lerna": "lerna",
       "lexec": "lerna exec",
-      "publish:all": "lerna exec npm publish",
+      "publish:all": "lerna publish from-package --yes --npm-client yarn --npm-tag beta",
       "build": "lerna run build",
       "build:watch": "lerna exec --parallel -- yarn build:watch",
       "test": "jest",
