--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-    "scripts": {
-      "prepublish": "yarn build",
-      "lerna": "lerna",
-      "lexec": "lerna exec",
-      "publish:all": "lerna publish from-package --yes --npm-client npm --npm-tag beta",
-      "build": "lerna run build",
-      "build:watch": "lerna exec --parallel -- yarn build:watch",
-      "test": "jest",
-      "coverage": "jest --coverage",
-      "version:bump": "lerna version --no-git-tag-version --no-push --exact"
-    },
-    "devDependencies": {
-      "@types/jest": "^24.0.13",
-      "@types/lodash": "^4.14.134",
-      "@types/node": "^12.0.8",
-      "@typescript-eslint/eslint-plugin": "^1.10.2",
-      "@typescript-eslint/parser": "^1.10.2",
-      "eslint": "^5.16.0",
-      "eslint-plugin-jest": "^22.6.4",
-      "nodemon": "^1.19.1",
-      "lerna": "^3.14.1",
-      "npm-run-all": "^4.1.5",
-      "jest": "^24.8.0",
-      "ts-jest": "^24.0.2",
-      "typescript": "^3.5.1"
-    },
-    "workspaces": [
-      "packages/*"
-    ],
-    "author": "Travis Peterson",
-    "license": "MIT"
-  }
+  "private": true,
+  "scripts": {
+    "prepublish": "yarn build",
+    "lerna": "lerna",
+    "lexec": "lerna exec",
+    "publish:all": "lerna publish from-package --yes --npm-client npm --npm-tag beta",
+    "build": "lerna run build",
+    "build:watch": "lerna exec --parallel -- yarn build:watch",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "version:bump": "lerna version --no-git-tag-version --no-push --exact"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.13",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-jest": "^22.6.4",
+    "nodemon": "^1.19.1",
+    "lerna": "^3.14.1",
+    "npm-run-all": "^4.1.5",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.1"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "author": "Travis Peterson",
+  "license": "MIT"
+}
