setting registry urls

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ jobs:
     before_deploy:
       - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
       - echo "//registry.yarnpkg.com/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
+      - npm config set regisry https://registry.npmjs.org/
+      - yarn config set regisry https://registry.npmjs.org/
     deploy:
       node_js: "12.1"
       provider: script
