adds public access to publish config for packages

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,6 +6,9 @@
   "author": "Travis Peterson",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch"
