--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pikejs/db",
+  "name": "@rackify/db",
   "version": "0.0.1-beta1",
-  "description": "pike database integration powered by typeorm",
+  "description": "rackify database integration powered by typeorm",
   "main": "lib/index.js",
   "author": "Travis Peterson",
   "license": "MIT",
