--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pikejs/cli",
+  "name": "@rackify/cli",
   "version": "0.0.1-beta1",
-  "description": "pike cli",
+  "description": "rackify cli",
   "main": "lib/cli.js",
   "author": "Travis Peterson",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "bin": {
-    "pike": "./bin/run.js"
+    "rackify": "./bin/run.js"
   },
   "scripts": {
     "build": "tsc",
