--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@pikejs/*": ["packages/*"]
+      "@rackify/*": ["packages/*"]
     }
   },
 
