--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rackify/server",
-  "version": "0.0.1-beta2",
+  "version": "0.0.1-beta.3",
   "description": "rackify database integration powered by typeorm",
   "main": "lib/index.js",
   "author": "Travis Peterson",
@@ -14,7 +14,7 @@
     "build:watch": "tsc --watch"
   },
   "dependencies": {
-    "@rackify/config": "0.0.1-beta2",
+    "@rackify/config": "0.0.1-beta.3",
     "async-listener": "^0.6.10",
     "emitter-listener": "^1.1.2",
     "fast-glob": "^2.2.7",
