--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rackify/cli",
-  "version": "0.0.1-beta.3",
+  "version": "0.0.1",
   "description": "rackify cli",
   "main": "lib/cli.js",
   "author": "Travis Peterson",
